--- a/blog.html
+++ b/blog.html
@@ -7,48 +7,47 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel='stylesheet prefetch' href='//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
 
 <body style="background:#EEEEEE;">
 
-		<div class="container">
-		<div align="center">
-		<nav style="margin-top:12px;">
+    <div align="center" style="background:#424242;">
+    <nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/blog">Blog</a></li>
-        		<li><a href="/projects">Projects</a></li>
-        		<li><a href="/contact">Contact</a></li>
+        		<li><a href="/blog.html">Blog</a></li>
+        		<li><a href="/projects.html">Projects</a></li>
+        		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
 		</div>
-		</div>
+
     
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr style="margin-top:0px !important;" />
 
 <div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
 
   <h1 align="center">The Meme Vector</h1>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this blog</button></div>
-              <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this blog</button></div>
+              <div id="tag_box" >
             This page is for smaller memes like tutorials, essays, and various cool stuff I find on the net. Naturally, there will be some posts concerning my larger projects here.
             </div>
     </div>
-  <div class="info">
+
   <div id="intro" class="collapse" style="margin-left:0%;">
   This page is for smaller memes like tutorials, essays, and various cool stuff I find on the net. Naturally, there will be some posts concerning my larger projects here.
   </div>
-  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
   <p>Latest Post</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" class="button_pic"/> Optimizing your upvotes</button></div>
             <div id="tag_box">
             Kaggle provided an 8GB dataset that was composed of the May 2015 comments on Reddit. To me the best use of this data was extracting information that would help me to maximize upvotes in the future. After determining how the data was structured, I figured a simple place to start was determining which subreddits you're most likely to get upvotes in. Then I wanted to play with some text analysis, so I figured out which specific words were most likely to result in downvotes. You can check out my python notebook <a href="https://www.kaggle.com/austincap/d/reddit/reddit-comments-may-2015/best-subs-for-upvotes-worst-words-for-upvotes">here</a>.
             </div>
@@ -63,7 +62,7 @@
   
     <div>
      <figure tabindex="1">
-      <img src="../res/upvoted.png" />
+      <img src="/res/upvoted.png" />
       <figcaption contenteditable="false">Upvoted threshold of 10+</figcaption>
    </figure>
    </div>
@@ -71,14 +70,14 @@
   <p>For non-upvoted posts (a <code>score</code> of 1 or 0) this yielded a graph that looked like this:</p>
       <div>
      <figure tabindex="2">
-      <img src="../res/non-upvoted.png" />
+      <img src="/res/non-upvoted.png" />
       <figcaption contenteditable="false">Non-upvoted</figcaption>
    </figure>
    </div>
   <p>I also generated a graph that used an upvoted threshold of 5+ for good measure. As you can see it looks pretty similar to my 10+ upvoted graph anyway:</p>
       <div>
      <figure tabindex="3">
-      <img src="../res/upvoted5.png" />
+      <img src="/res/upvoted5.png" />
       <figcaption contenteditable="false">Upvoted threshold of 5+</figcaption>
    </figure>
    </div>
@@ -86,14 +85,14 @@
 
       <div>
      <figure tabindex="4">
-      <img src="../res/good_ratio.png" />
+      <img src="/res/good_ratio.png" />
       <figcaption contenteditable="false">Good upvote/non-upvote ratio</figcaption>
    </figure>
    </div>
   <p></p>
       <div>
      <figure tabindex="5">
-      <img src="../res/bad_ratio.png" />
+      <img src="/res/bad_ratio.png" />
       <figcaption contenteditable="false">Bad upvote/non-upvote ratio</figcaption>
    </figure>
    </div>
@@ -115,24 +114,24 @@
   </div>
   </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr />
 
   <p>Earlier Posts</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Placeholder</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" class="button_pic"/> Placeholder</button></div>
+            <div id="tag_box">
             Placeholder.
             </div>
   </div>
 
-  <div id="info">
+
   <div id="latestproj" class="collapse" style="margin-left:0%;">
   Placeholder
   </div>
-  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
 </div>
 
