--- a/contact.html
+++ b/contact.html
@@ -12,64 +12,62 @@
 
 <body style="background:#EEEEEE;">
 
-		<div class="container">
-		<div align="center">
-		<nav style="margin-top:12px;">
+    <div align="center" style="background:#424242;">
+    <nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/blog">Blog</a></li>
-        		<li><a href="/projects">Projects</a></li>
+        		<li><a href="/blog.html">Blog</a></li>
+        		<li><a href="/projects.html">Projects</a></li>
         		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
 		</div>
-		</div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr style="margin-top:0px !important;" />
 
-<div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
+<div class="big_three" align="left">
 
   <h1 align="center">Contact</h1>
 
 <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Who's Austin?</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> Who's Austin?</button></div>
 
+            <div id="tag_box">
             <p>Click the button to the left for more info about me, or just email me at: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> </p>
             </div>
 </div>
 
-  <div class="info">
+
   <div id="intro" class="collapse" style="margin-left:0%;">
   The data guy of Winston-Salem. Feel free to check out my web presence on these social media sites:   <ul class="social-icons list-unstyled list-inline" > 
-        <li> <a href="https://reddit.com/u/The_Data_Guy" style="color:#3355EE !important;color:#3355EE !important;"><i class="fa fa-reddit"></i></a></li>   
-        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook"></i></a></li>  
-        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
+        <li> <a href="https://reddit.com/u/The_Data_Guy" class="icon_on_background"><i class="fa fa-reddit"></i></a></li>   
+        <li> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook" class="icon_on_background"></i></a></li>  
+        <li class="icon_on_background"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
         <li style="color:#3355EE !important;font-size:20px;"> <a href="https://plus.google.com/u/0/106792204416719365033"><i class="fa fa-google-plus"></i></a></li> 
       </ul>
   </div>
-  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr  />
 
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Web presence</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0  !important;font-size:170% !important;white-space:normal !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" class="button_pic"/> Web presence</button></div>
+            <div id="tag_box">
              Feel free to investigate me on your own terms. Click the button to the left for access to my profiles on a variety of sites.
             </div>
   </div>
 
-  <div class="info">
+
   <div id="latestpost" class="collapse" style="margin-left:0%;">
   <div align="left">
 
   </div>
-  </div>
+
   </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr />
 
 </div>
 
