--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/blog">Blog</a></li>
-        		<li><a href="/projects">Projects</a></li>
+        		<li><a href="/blog.html">Blog</a></li>
+        		<li><a href="/projects.html">Projects</a></li>
         		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
