--- a/projects.html
+++ b/projects.html
@@ -7,50 +7,48 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <link rel='stylesheet prefetch' href='//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
 
 <body style="background:#EEEEEE;">
 
-		<div class="container">
-		<div align="center">
-		<nav style="margin-top:12px;">
+    <div align="center" style="background:#424242;">
+    <nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/blog">Blog</a></li>
-        		<li><a href="/projects">Projects</a></li>
+        		<li><a href="/blog.html">Blog</a></li>
+        		<li><a href="/projects.html">Projects</a></li>
         		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
 		</div>
-		</div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr style="margin-top:0px !important;" />
 
-<div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
+<div class="big_three" align="left">
   <h1 align="center">Projects</h1>
 <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this page</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0  !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this page</button></div>
+            <div id="tag_box" >
               This page is for keeping track of the larger scale projects I'm working on. There will be links to other pages github is incapable of hosting here.
             </div>
 </div>
 
-  <div class="info">
+
   <div id="intro" class="collapse" style="margin-left:0%;">
   Placeholder
   </div>
-  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
   <p>Current Project</p>
 
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Image Enhancement Using a GAN</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" class="button_pic"/> Image Enhancement Using a GAN</button></div>
+            <div id="tag_box">
             <ul>
               <li>Deep learning</li>
               <li>Image processing</li>
@@ -59,19 +57,19 @@
             </div>
   </div>
 
-  <div id="info">
+
   <div id="latestproj" class="collapse" style="margin-left:0%;">
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
- </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
   <p>Other Projects</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Personanexus</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Personanexus</button></div>
+            <div id="tag_box">
             <ul>
               <li>PHP</li>
               <li>Mongo</li>
@@ -80,14 +78,14 @@
             </div>
    </div>
 
-  <div id="info">
+
   <div id="personanexus" class="collapse" style="margin-left:0%;">
   <a href="#">Link to Personanexus site.</a>
   <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
- </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
 </div>
 
